--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -27,14 +27,14 @@ bind "HOME" "CrosshairDot" // Crosshair 'CrosshairDot'
 alias "binds" "echo 'HOME': Crosshair 'CrosshairDot';"
 
 // Bind Crosshair Normal.
-alias "CrosshairNormal" "cl_crosshairdot 0;cl_crosshairsize 5;cl_crosshairthickness 1;cl_crosshair_drawoutline 1;"
+alias "CrosshairNormal" "cl_crosshairdot 0;cl_crosshairsize 3;cl_crosshairthickness 1;cl_crosshair_drawoutline 1;"
 bind "KP_4" "CrosshairNormal" // Crosshair 'CrosshairNormal'
 alias "binds" "echo 'KP_4': Crosshair 'CrosshairNormal';"
 
 // Bind Green Crosshair.
 alias "GreenCrosshair" "cl_crosshaircolor_b 0;cl_crosshaircolor_r 0;cl_crosshaircolor_g 255;"
-bind "KP_8" "GreenCrosshair" // Crosshair 'GreenCrosshair'
-alias "binds" "echo 'KP_8': Crosshair 'GreenCrosshair';"
+bind "PGDOWN" "GreenCrosshair" // Crosshair 'GreenCrosshair'
+alias "binds" "echo 'PGDOWN': Crosshair 'GreenCrosshair';"
 
 // Bind Pink Crosshair.
 alias "PinkCrosshair" "cl_crosshaircolor_b 255;cl_crosshaircolor_r 255;cl_crosshaircolor_g 0;"
@@ -48,23 +48,23 @@ alias "binds" "echo 'KP_5': Crosshair 'CrosshairStatic';"
 
 // Bind Crosshair Style 5.
 alias "CrosshairStyle5" "cl_crosshairstyle "5;"
-bind "KP_6" "CrosshairStyle5" // Crosshair 'CrosshairStyle5'
+bind "KP_6" "CrosshairDynamic" // Crosshair 'CrosshairStyle5'
 alias "binds" "echo 'KP_6': Crosshair 'CrosshairStyle5';"
 
-// Bind Crosshair Size 5 LARGE.
-alias "CrosshairSize5" "cl_crosshairsize "5;"
-bind "PGDN" "CrosshairSize5" // Crosshair 'CrosshairSize5'
-alias "binds" "echo 'PGDN': Crosshair 'CrosshairSize5';"
+// Bind Crosshair LARGE.
+alias "CrosshairLarge" "cl_crosshairsize "5;"
+bind "KP_9" "CrosshairLarge" 
+alias "binds" "echo 'KP_9': Crosshair 'CrosshairLarge';"
 
-// Bind Crosshair Size 4 MEDIUM.
-alias "CrosshairSize4" "cl_crosshairsize "4;"
-bind "KP_2" "CrosshairSize4" // Crosshair 'CrosshairSize4'
-alias "binds" "echo 'KP_2': Crosshair 'CrosshairSize4';"
+// Bind Crosshair Size MEDIUM.
+alias "CrosshairMedium" "cl_crosshairsize "4;"
+bind "KP_8" "CrosshairMedium" 
+alias "binds" "echo 'KP_8': Crosshair 'CrosshairMedium';"
 
-// Bind Crosshair Size 3 SMALL.
-alias "CrosshairSize3" "cl_crosshairsize "3;"
-bind "END" "CrosshairSize3" // Crosshair 'CrosshairSize3'
-alias "binds" "echo 'END': Crosshair 'CrosshairSize3';"
+// Bind Crosshair Size SMALL.
+alias "CrosshairSmall" "cl_crosshairsize "3;"
+bind "KP_7" "CrosshairSmall" 
+alias "binds" "echo 'KP_7': Crosshair 'CrosshairSmall';"
  
 // Binds
 cl_use_opens_buy_menu "0"
