--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -68,16 +68,14 @@ alias "binds" "echo 'KP_7': Crosshair 'CrosshairSmall';"
  
 // Binds
 cl_use_opens_buy_menu "0"
-bind "g" = "drop" 
-bind "f1" = "autobuy"
-bind "f2" = "rebuy"
-bind "4" = "slot6"
-bind "f" = "slot7"
-bind "c" = "slot8"
-bind "x" = "slot9"
-bind "v" = "slot10"
-bind "y" = "messagemode"
-bind "t" = "messagemode2"
+bind "g" "drop"
+bind "F1" "autobuy"
+bind "F2" "rebuy"
+bind "4" "slot6"
+bind "f" "slot7"
+bind "c" "slot8"
+bind "x" "slot9"
+bind "v" "slot10"
 bind "/" "toggleconsole"
 
 //Mouse settings
