--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -33,8 +33,8 @@ alias "binds" "echo 'KP_4': Crosshair 'CrosshairNormal';"
 
 // Bind Green Crosshair.
 alias "GreenCrosshair" "cl_crosshaircolor_b 0;cl_crosshaircolor_r 0;cl_crosshaircolor_g 255;"
-bind "PGDOWN" "GreenCrosshair" // Crosshair 'GreenCrosshair'
-alias "binds" "echo 'PGDOWN': Crosshair 'GreenCrosshair';"
+bind "PGDN" "GreenCrosshair" // Crosshair 'GreenCrosshair'
+alias "binds" "echo 'PGDN': Crosshair 'GreenCrosshair';"
 
 // Bind Pink Crosshair.
 alias "PinkCrosshair" "cl_crosshaircolor_b 255;cl_crosshaircolor_r 255;cl_crosshaircolor_g 0;"
