--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -12,9 +12,10 @@ cl_crosshairstyle "4" //Classic Static
 cl_crosshair_drawoutline "1"
 
 // Bind Jump Throw.
-alias +jumpthrow "+jump;-attack"
-alias -jumpthrow "-jump"
-bind "mouse3" "+jumpthrow"
+alias "+jumpaction" "+jump;"
+alias "+throwaction" "-attack; -attack2"
+alias "-jumpaction" "-jump" 
+bind "mouse3" "+jumpaction;+throwaction;"
 
 // Bind Pistol Drops.
 bind "j" "buy p250;drop;"
