--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -84,10 +84,10 @@ sensitivity "0.636"
 
 //Viewmodel aka position of the gun
 viewmodel_fov "68"
-//viewmodel_offset_x "2.500000"
-//viewmodel_offset_y "0"
-//viewmodel_offset_z "-1.500000"
-//viewmodel_presetpos "3"
+viewmodel_offset_x "2.500000"
+viewmodel_offset_y "0"
+viewmodel_offset_z "-1.500000"
+viewmodel_presetpos "3"
 
 echo "PIXAZOMG Autoexec Config loaded" 
 host_writeconfig
